--- a/templates/rest_framework/base.html
+++ b/templates/rest_framework/base.html
@@ -42,8 +42,9 @@
                             {% endblock %}
                         </span>
                         <ul class="nav navbar-nav">
-                          <li class="active"><a href="/">Home</a></li>
+                          <li><a href="/">Home</a></li>
                           <li><a href="/media/BrianOHare-HOT-Export-Proposal.pdf">Export Tool Proposal</a></li>
+                          <li><a href="https://github.com/bjohare/hot-export-demo">GitHub</a></li>
                         </ul>
                         <ul class="nav navbar-nav pull-right">
                             {% block userlinks %}
