--- a/templates/index.html
+++ b/templates/index.html
@@ -44,8 +44,9 @@
                         </span>
                         
                         <ul class="nav navbar-nav">
-                          <li class="active"><a href="api">API</a></li>
-                          <li><a href="/media/BrianOHare-HOT-Export-Proposal.pdf">Export Tool Proposal</a></li>
+                          <li><a href="api">Browse API</a></li>
+                          <li><a href="/media/BrianOHare-HOT-Export-Proposal.pdf" target="_blank">Export Tool Proposal</a></li>
+                          <li><a href="https://github.com/bjohare/hot-export-demo" target="_blank">GitHub</a></li>
                         </ul>
                         
                         <ul class="nav navbar-nav pull-right">
@@ -74,26 +75,25 @@
                         <p>
                         This demo makes use of the <a href="http://www.celeryproject.org/" target="_blank">Celery Distributed Task Queue</a> to run dummy HOT Export <a href="/api/jobs">Jobs</a>.
                         Jobs can be configured to export to a number of <a href="/api/formats">ExportFormat</a>'s.
-                        On creation, Jobs are sent directly to the Task Queue for processing.
+                        On creation, Jobs are sent directly to the queue for processing.
                         Once the task completes the job status is updated.
                         This implementation is intended to demonstrate how the issue of queueing <a href="/api/formats/1">OBF ExportFormat</a> jobs in particular could be managed.
+                        Use the html form at <a href="/api/jobs">/api/jobs</a> to create a new demo job. Follow the <strong>url</strong> link in the newly created job to see its status update (after 20s).
                         </p>
                         <p>
-                        As outlined in my <a href="/media/BrianOHare-HOT-Export-Proposal.pdf">proposal</a>, the generation of .obf
-                        files is a memory intensive process. On a two core machine with 4GB ram the generation
-                        of an .obf file for Liberia (20MB) took 2 minutes using 2.5GB ram and resulted in a 30
-                        MB .obf file. The bounding box for Liberia is currently smaller than the area allowed for
-                        selection in the current export tool. While the memory use of the jvm can be reduced, if
-                        several of these jobs are run in parallel, a machine with 4GB ram will potentially run out of
-                        memory. The current implementation which uses the database as a queue offers no control over the number of concurrent export jobs.
-                        It simply polls the database every five seconds looking for new jobs and starts a export process regardless of whether the resources are available.
-                        
+                        As outlined in my <a href="/media/BrianOHare-HOT-Export-Proposal.pdf">proposal</a>, the generation of OSMAnd <strong>.obf</strong>
+                        files is a memory intensive process. The current implementation which uses the database as a queue offers no control over the number of concurrent export jobs.
+                        It simply polls the database every five seconds looking for new jobs and starts a export process regardless of whether the resources are available.                     
                         The use of an asynchronous message queue provides a reliable, scalable solution to this problem.
                         </p>
                     </div>
                     <br/>
+                    <table>
+                    <tr>
+                    <td style="vertical-align: top; padding-right: 5em;">
                     <div>
                         Some of the benefits of <a href="http://bit.ly/1JYQGFc" target="_blank">Asynchronous Message Queues</a> include:
+                        <br/><br/>
                         <ol>
                             <li>Scalability:</li>
                             <li>Configurability:
@@ -106,9 +106,13 @@
                                 
                             </li>
                         </ol>
-                        
                     </div>
-                    
+                    </td>
+                    <td>
+                    <div style="float: right;"><img src="/media/mq.png"/></div>
+                    </td>
+                    </tr>
+                    </table>
                 </div>
 
             
